<resources>
    <string name="app_name">My Ticker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_liveticker">Create new Liveticker</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_liveticker">LivetickerActivity</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="no_access_permission">No permission to access this page!</string>
    <string name="register_email_hint">E-mail address</string>
    <string name="register_password_hint">Password</string>
    <string name="register_password2_hint">Repeat Password</string>
    <string name="register_button">Register</string>
    <string name="register_button_google">Sign in with Google</string>
    <string name="login_button">Login</string>
    <string name="verification_email_sent">Verification email sent! Please check your emails.</string>
    <string name="channel_username">Enter username</string>
    <string name="open">Open</string>
    <string name="info">Info</string>
    <string name="loading">Loading...</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="finish_liveticker_confirm">Do you really want to finish the liveticker?</string>
    <string name="start_liveticker_confirm">Do you really want to start the liveticker early?</string>
    <string name="delete_liveticker_confirm">Do you really want to delete this liveticker? (Can not be reversed)</string>
    <string name="logging_in">Logging in...</string>
    <string name="share">Share Liveticker</string>
    <string name="channel_info_placeholder">Enter channel info/description</string>
    <string name="channel_info">Info</string>
    <string name="channel">Channel</string>
    <string name="user_load_failure">User doesn\'t exist anymore or can\'t be loaded!</string>
    <string name="liveticker_load_failure">Liveticker doesn\'t exist anymore or can\'t be loaded!</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="copy_success">Copied link</string>
    <string name="logout">Logout</string>
    <string name="channel_live_tickers">Live</string>
    <string name="channel_past_tickers">Archive</string>
    <string name="channel_edit_save">Save</string>
    <string name="send">Send</string>
    <string name="no_comments">No comments yet!</string>
    <string name="no_internet">No internet connection! Please try again</string>
    <string name="sending">Sending...</string>
    <string name="saving">Saving</string>
    <string name="signing_in">Signing in...</string>
    <string name="reset_password">Password</string>
    <string name="reset_password_title">Reset password</string>
    <string name="register_text">Register</string>
    <string name="channel_edit_pick_profile">Choose Image for Profile Picture</string>
    <string name="channel_edit_pick_title">Choose Image for Title Picture</string>
    <string name="gallery">Gallery</string>
    <string name="comments">Comments</string>
    <string name="login_failure">Login failed!</string>
    <string name="password_empty">Password is empty!</string>
    <string name="password_match">Passwords don\'t match!</string>
    <string name="not_verified_yet">Email not verified yet! Please check your emails and then re-login!</string>
    <string name="liveticker_sort_dialog_live">Currently live</string>
    <string name="liveticker_sort_dialog_not_live">Not live yet</string>
    <string name="camera">Camera</string>
    <string name="camera_confirm">Done</string>
    <string name="user_changed">User changed</string>
    <string name="camera_retry">Retry</string>
    <string name="camera_permission_failure">Not enough permissions to open Camera!</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="edit_user_channel">Edit your channel</string>
    <string name="image_title">Image from My Ticker</string>
    <string name="new_liveticker_event">New Event in</string>
    <string name="new_liveticker_event_started">Liveticker started</string>
    <string name="new_liveticker_event_started_subtitle">is going live now!</string>
    <string name="new_liveticker_event_finished">Finished Liveticker</string>
    <string name="new_liveticker_event_finished_subtitle">has been finished!</string>
    <string name="or">OR</string>
    <string name="notifications_activated">You will now get notifications when new events are added to this liveticker!</string>
    <string name="notifications_deactivated">Notifications deactivated!</string>
    <string name="connect_failure">Action not possible! Please check your internet connection</string>
    <string name="view_own_channel">View your channel</string>
    <string name="saved_image">Saved image to your gallery!</string>
    <string name="image_upload_failure">Failed to upload image! Retry?</string>
    <string name="image_upload_failure_size">Image resolution is too small! Please try again!</string>
    <string name="image_too_big_resize">Image resolution is too big and was downscaled!</string>
    <string name="editing_channel_failure">Process failed! Please check your internet connection and try again</string>
    <string name="add_liveticker_event_failure">Failed to add event! Please check your internet connection and try again</string>
    <string name="liveticker_deletion_failure">Failed to delete Liveticker! Please check your internet connection and try again</string>
    <string name="liveticker_toggle_failure">Failed to change state! Please check your internet connection and try again</string>
    <string name="feed_load_failure">Failed to fetch feed! Please refresh</string>
    <string name="fetch_comments_failure">Failed to fetch comments! Please refresh</string>
    <string name="add_liveticker_user_failure">Not authorised to add new Liveticker!</string>
    <string name="feed_title">Feed</string>
    <string name="no_caption">No Caption!</string>
    <string name="nothing_here">Nothing here!</string>
    <string name="liveticker_list_title">Your Livetickers</string>
    <string name="search_error">Search error! Please try again.</string>
    <string name="comment_spam">Error adding comment! You need to wait atleast 30 seconds before adding a new comment</string>
    <string name="error_adding_comment">Error adding comment! Please try again.</string>
    <string name="error_adding_event">Error adding event! Is the Liveticker Live and do you have an internet connection?</string>
    <string name="search_title">Search</string>
    <string name="add_liveticker_title">Create a new Liveticker</string>
    <string name="add_liveticker_subtitle">Here you can create a new Liveticker. All your subscribers will be noticed once it is created!</string>
    <string name="no_status">No status yet!</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_subtitle">Do you want to recieve notifications of new Livetickers from subscribed channels?</string>
    <string name="vibrations">Vibrations</string>
    <string name="vibrations_subtitle">Should your phone vibrate when you recieve a new notification?</string>
    <string name="view_livetickers">View your livetickers</string>
    <string name="viewers">\ viewers</string>
    <string name="register_required">You need to register to use this feature!</string>
    <string name="status">Status</string>
    <string name="created_by">Created by</string>
    <string name="description">Description</string>
    <string name="no_description">No description yet!</string>
    <string name="subscription_amount">Subscribers: </string>
    <string name="add_liveticker_public_title">Liveticker is indexed</string>
    <string name="add_liveticker_public_title_private">Liveticker is not indexed</string>
    <string name="add_liveticker_public_subtitle">Should your Liveticker be indexed in the search function and the start page feeds?</string>
    <string name="add_liveticker_title_title">Liveticker title</string>
    <string name="add_liveticker_title_subtitle">This is the title that will be displayed in the search and on your channel. Keep it short and simple!</string>
    <string name="add_liveticker_description_title">Liveticker description</string>
    <string name="add_liveticker_description_subtitle">The description can be used to give your viewers more detailled informations about your Liveticker. Maximum of 999 characters allowed.</string>
    <string name="add_liveticker_status_title">Liveticker status</string>
    <string name="add_liveticker_status_subtitle">Short, important informations that are displayed below the title. Maximum of 140 characters allowed.</string>
    <string name="add_liveticker_start_title">Liveticker starting time</string>
    <string name="add_liveticker_start_subtitle">Should your Liveticker go live immediately or at a specific time? (max. 5 days from now)</string>
    <string name="edit_channel_username_title">Channel username</string>
    <string name="edit_channel_username_subtitle">The username that is displayed in your Livetickers.</string>
    <string name="edit_channel_description_title">Channel description</string>
    <string name="edit_channel_description_subtitle">Enter a description about your channel to provide more information to your viewers</string>
    <string name="channel_status">Enter channel status</string>
    <string name="edit_channel_status_title">Channel status</string>
    <string name="edit_channel_status_subtitle">A short status message that will be shown alongside your username in the search and on your channel</string>
    <string name="edit_channel_profile_picture_title">Profile picture</string>
    <string name="edit_channel_profile_picture_subtitle">Enter a description about your channel to provide more information to your viewers</string>
    <string name="edit_channel_title_picture_title">Title picture</string>
    <string name="edit_channel_title_picture_subtitle">Enter a description about your channel to provide more information to your viewers</string>
    <string name="subscribe">Subscribe</string>
    <string name="comment_post_failure">Failed to post comment!</string>
    <string name="subscribe_failure">Subscription failed!</string>
    <string name="reset_email_sent">Reset email sent! Please check your inbox</string>
    <string name="reset_email_failure">Could not send reset email! Please try again</string>
    <string name="account_needed_profile">You need to register to create livetickers and a channel!</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unsubscribe_failure">Unsubscription failed!</string>
    <string name="subscribed">Subscribed</string>
    <string name="new_liveticker_notification_title">New liveticker created!</string>
    <string name="started_liveticker">Started Liveticker!</string>
    <string name="created_liveticker">Created Liveticker!</string>
    <string name="finished_liveticker">Finished Liveticker!</string>
    <string name="username_empty">Username is empty or invalid!</string>
    <string name="profile_pictures_invalid">Profile or/and Title picture is/are invalid!</string>
    <string name="liveticker_input_placeholder">Enter your message</string>
    <string name="filter">Filter:</string>
    <string name="load_more">Load more...</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="recently_visited">Recently Visited</string>
    <string name="email_invalid">Email is invalid!</string>
    <string name="fields_empty">One ore more fields are empty!</string>
    <string name="passwords_must_match">Passwords must match!</string>
</resources>