<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/livetickerBackground"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="?actionBarSize"
        android:gravity="center"
        android:id="@+id/fragment_profile_anonymous">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_needed_profile"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/fragment_profile_anonymous_button"
            android:text="@string/register_button"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/fragment_profile_edit_channel"
        android:text="@string/edit_user_channel"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/fragment_profile_view_channel"
        android:text="@string/view_own_channel"
        />
</LinearLayout>