<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sunilson.pro4.MainActivity">

    <item
        android:id="@+id/liveticker_menu_comments"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionLayout="@layout/comment_icon"
        android:title="@string/comments"/>

    <item
        android:id="@+id/liveticker_menu_info"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/channel_info"/>

    <item
        android:id="@+id/liveticker_menu_share"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"/>
</menu>