<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_username"
            android:id="@+id/fragment_edit_channel_username_layout"
            >

            <EditText
                android:id="@+id/fragment_edit_channel_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_status"
            android:id="@+id/fragment_edit_channel_status_layout"
            >

            <EditText
                android:id="@+id/fragment_edit_channel_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/channel_info"
            android:id="@+id/fragment_edit_channel_info_layout"
            >

            <EditText
                android:id="@+id/fragment_edit_channel_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/fragment_edit_channel_pick_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/channel_edit_pick_profile" />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:id="@+id/fragment_edit_channel_profile"
            android:adjustViewBounds="true"
            />
        <Button
            android:id="@+id/fragment_edit_channel_pick_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/channel_edit_pick_title" />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_edit_channel_title"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <Button
            android:id="@+id/fragment_edit_channel_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/channel_edit_save" />

    </LinearLayout>
    </ScrollView>

    <!-- Progress bar overlay; shown while login is in progress -->
    <include layout="@layout/progress_overlay"/>

</RelativeLayout>