<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorPrimary"
android:clipToPadding="false"
android:padding="25dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/login_background"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/primary_text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/registerFragment_email"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:drawableLeft="@drawable/email_icon"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registerFragment_password"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:drawableLeft="@drawable/lock_icon"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/registerFragment_password2"
        style="@style/BasicEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:ems="10"
        android:drawableLeft="@drawable/lock_icon"
        android:hint="@string/register_password2_hint"
        android:inputType="textPassword" />

    <include layout="@layout/big_submit_button_with_progress" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:animateLayoutChanges="true">
        <Button
            style="@style/SubmitButtonLarge"
            android:id="@+id/loginFragment_login"
            android:layout_width="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            android:textColor="@color/primary_text_dark"
            android:textSize="20sp" />
    </RelativeLayout>
</LinearLayout>
</RelativeLayout>